--- a/AspMVCECommerce/Views/Shared/_SmartPhonesCompare.cshtml
+++ b/AspMVCECommerce/Views/Shared/_SmartPhonesCompare.cshtml
@@ -330,37 +330,103 @@
         <tr class="comparison_other_attribute_row">
             <th> <span class="a-size-base a-color-base">Color</span> </th>
             <td style="background-color: #ffffde;">     <span class="a-size-base a-color-base">Black</span>   </td>
-            <td>       <span class="a-size-base a-color-base">Black</span>   </td>
-            <td>       <span class="a-size-base a-color-base">Black</span>   </td>
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span class="a-size-base a-color-base">Black</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span class="a-size-base a-color-base">Black</span>   </td>
+                }
+            }
 
         </tr>
         <tr>
             <th> <span class="a-size-base a-color-base">Screen Size</span> </th>
             <td style="background-color: #ffe;">     <span class="a-size-base a-color-base">6.5 inches</span>   </td>
-            <td>       <span class="a-size-base a-color-base">6.5 inches</span>   </td>
-            <td>       <span class="a-size-base a-color-base">6.5 inches</span>   </td>
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
 
+
+                if (productIndex == 2)
+                {
+                    <td><span class="a-size-base a-color-base">6.5 inches</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td><span class="a-size-base a-color-base">6.5 inches</span>   </td>
+                }
+            }
         </tr>
         <tr class="comparison_other_attribute_row">
             <th> <span class="a-size-base a-color-base">Item Dimensions</span> </th>
             <td style="background-color: #ffffde;">     <span class="a-size-base a-color-base">0.35 x 6.46 x 2.98 inches</span>   </td>
-            <td>       <span class="a-size-base a-color-base">0.35 x 6.46 x 2.98 inches</span>   </td>
-            <td>       <span class="a-size-base a-color-base">0.33 x 6.3 x 2.96 inches</span>   </td>
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
 
+
+                if (productIndex == 2)
+                {
+                    <td><span class="a-size-base a-color-base">0.35 x 6.46 x 2.98 inches</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td><span class="a-size-base a-color-base">0.33 x 6.3 x 2.96 inches</span>   </td>
+                }
+            }
         </tr>
         <tr class="comparison_other_attribute_row">
             <th> <span class="a-size-base a-color-base">Item Weight</span> </th>
             <td style="background-color: #ffe;">     <span class="a-size-base a-color-base">7.23 ounces</span>   </td>
-            <td>       <span class="a-size-base a-color-base">0.35 ounces</span>   </td>
-            <td>       <span class="a-size-base a-color-base">6.67 ounces</span>   </td>
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
 
+
+                if (productIndex == 2)
+                {
+                    <td><span class="a-size-base a-color-base">0.35 ounces</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td><span class="a-size-base a-color-base">6.67 ounces</span>   </td>
+                }
+            }
         </tr>
         <tr class="comparison_other_attribute_row">
             <th> <span class="a-size-base a-color-base">Operating System</span> </th>
             <td style="background-color: #ffffde;">     <span class="a-size-base a-color-base">Android</span>   </td>
-            <td>       <span class="a-size-base a-color-base">Android</span>   </td>
-            <td>       <span class="a-size-base a-color-base">Android</span>   </td>
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
 
+
+                if (productIndex == 2)
+                {
+                    <td><span class="a-size-base a-color-base">Android</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td><span class="a-size-base a-color-base">Android</span>   </td>
+                }
+            }
         </tr>
     </tbody>
 </table>
