--- a/AspMVCECommerce/Views/Shared/_CameraCompare.cshtml
+++ b/AspMVCECommerce/Views/Shared/_CameraCompare.cshtml
@@ -332,57 +332,194 @@
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Screen Size</span> </th>
             <td style="background-color: #ffffde;">     <span>3.2</span>   </td>
-            <td>       <span>3</span>   </td>
-            <td>       <span>3.15 inches</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>3</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>3.15 inches</span>   </td>
+                }
+            }
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Item Dimensions</span> </th>
             <td style="background-color: #ffe;">     <span>11.1 x 8.9 x 7.4 inches</span>   </td>
-            <td>       <span>3.48 x 5.45 x 3.84 inches</span>   </td>
-            <td>       <span>3.3 x 5.3 x 3.9 inches</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>3.48 x 5.45 x 3.84 inches</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>3.3 x 5.3 x 3.9 inches</span>   </td>
+                }
+
+            }
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Item Weight</span> </th>
             <td style="background-color: #ffffde;">     <span>3.09 lbs</span>   </td>
-            <td>       <span>4.85 lbs</span>   </td>
-            <td>       <span>3.09 lbs</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>4.85 lbs</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>3.09 lbs</span>   </td>
+                }
+            }
+
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Optical Sensor Resolution</span> </th>
             <td style="background-color: #ffe;">     <span>35.4 megapixels</span>   </td>
-            <td>       <span>20 megapixels</span>   </td>
-            <td>       <span>30.3 megapixels</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>20 megapixels</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>30.3 megapixels</span>   </td>
+                }
+            }
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Optical Zoom</span> </th>
             <td style="background-color: #ffffde;">     <span>0x</span>   </td>
-            <td>       <span>0x</span>   </td>
-            <td>       <span>4.3x</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>0x</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>4.3x</span>   </td>
+                }
+            }
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Photo Sensor Size</span> </th>
             <td style="background-color: #ffe;">     <span>Full Frame (35mm)</span>   </td>
-            <td>       <span>Full Frame (35mm)</span>   </td>
-            <td>       <span>Full Frame (35mm)</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>Full Frame (35mm)</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>Full Frame (35mm)</span>   </td>
+                }
+            }
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Video Capture Resolution</span> </th>
             <td style="background-color: #ffffde;">     <span>4320p</span>   </td>
-            <td>       <span>2160p</span>   </td>
-            <td>       <span>2160p</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>2160p</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>2160p</span>   </td>
+                }
+            }
+
+
+
 
         </tr>
         <tr class="comparison_other_attribute_row">
             <th class="a-span3 comparison_attribute_name_column comparison_table_first_col" role="rowheader"> <span>Viewfinder Type</span> </th>
             <td style="background-color: #ffe;">     <span>Electronic</span>   </td>
-            <td>       <span>Electronic</span>   </td>
-            <td>       <span>Electronic</span>   </td>
+
+            @{ productIndex = 0; }
+            @foreach (var item in Model)
+            {
+                productIndex += 1;
+
+
+                if (productIndex == 2)
+                {
+                    <td>       <span>Electronic</span>   </td>
+                }
+
+                if (productIndex == 3)
+                {
+                    <td>       <span>Electronic</span>   </td>
+                }
+            }
 
         </tr>
     </tbody>
