fix hangfire send email error, change bread crumbs title for compare page, add value to href of add to cart link in product page, update toastr options on layout

--- a/AspMVCECommerce/Views/Home/Compare.cshtml
+++ b/AspMVCECommerce/Views/Home/Compare.cshtml
@@ -42,7 +42,7 @@
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
-                <h3 class="breadcrumb-header">Compare Related Product</h3>
+                <h3 class="breadcrumb-header">Compare Product</h3>
                 <ul class="breadcrumb-tree product-page-breadcrumb">
                     <li id="li-home-breadcrumb"><a href="~/Home/Index">Home</a></li>
                     <li id="li-product-id" class="breadcrum-product-name" style="display:none"></li>
